--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <nav>
       <ul>
          <li><a href="https://www.usa.gov">USA Government</a></li>
-         <li><a href="https://www.loc.org">Library of Congress </a></li>
+         <li><a href="https://www.loc.gov">Library of Congress </a></li>
          <li><a href="https://www.congress.gov">U.S. Congress</a></li>
          <li><a href="https://www.fdlp.gov">Federal Depository Library System </a></li>
          <li><a href="https://bensguide.gpo.gov">Ben's Guide to US Government for Kids</a></li>
